src/css/style.css
body {
    font-family: "Barlow Semi Condensed", serif;
}

main {
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

main .container {
    display: grid;
    grid-template-areas: 
    "daniel daniel jonathan kira"
    "jeanette patrick patrick kira";
    grid-gap: 30px;
    width: 82%;
}

main .container .card {
    padding: 35px 30px;
    border-radius: 10px;
    box-shadow: 10px 12px 15px -10px var(--primary-dark-grayish-blue-50);
    box-shadow: 10px 12px 15px -10px black;
}

main .container .card h2,
main .container .card h3,
main .container .card p:nth-child(2) {
    font-size: 13px;
}

main .container .card p:nth-child(2) {
    font-size: 15px;
}

main .container .card p:first-child {
    font-size: 22px;
}

main .container .card .profile {
    align-items: center;
    margin-bottom: 20px;
}

main .container .card .profile,
main .container .card .profile-info {
    display: flex;
}

main .container .card .profile img {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    margin-right: 12px;
}

main .container .card .profile-info {
    flex-direction: column;
}

main .container .card.daniel {
    grid-area: daniel;
    background: url(../images/bg-pattern-quotation.svg) 80% 0 no-repeat var(--primary-violet);
    img {
        box-sizing: content-box;
        border: 2px solid #A775F1;
    }
}

main .container .card.jonathan {
    grid-area: jonathan;
    background-color: var(--primary-dark-grayish-blue);
}

main .container .card.kira {
    grid-area: kira;
    background-color: var(--white);
}

main .container .card.jeanette {
    grid-area: jeanette;
    background-color: var(--white);
}

main .container .card.patrick {
    grid-area: patrick;
    background-color: var(--primary-dark-blackish-blue);
    img {
        box-sizing: content-box;
        border: 2px solid var(--primary-violet);
    }
}

main .container .card.daniel .profile-info h2,
main .container .card.jonathan .profile-info h2,
main .container .card.patrick .profile-info h2 {
    color: var(--neutral-light-gray);
}
main .container .card.daniel .profile-info h3,
main .container .card.jonathan .profile-info h3,
main .container .card.patrick .profile-info h3 {
    color: var(--neutral-light-gray-50);
}
main .container .card.daniel .testimonial p:first-child,
main .container .card.jonathan .testimonial p:first-child,
main .container .card.patrick .testimonial p:first-child {
    color: var(--neutral-light-grayish-blue);
    margin-bottom: 15px;
}
main .container .card.daniel .testimonial p:nth-child(2),
main .container .card.jonathan .testimonial p:nth-child(2),
main .container .card.patrick .testimonial p:nth-child(2) {
    color: var(--neutral-light-gray-70);
}

main .container .card.jeanette .profile-info h2,
main .container .card.kira .profile-info h2 {
    color: var(--primary-dark-grayish-blue);
}
main .container .card.jeanette .profile-info h3,
main .container .card.kira .profile-info h3 {
    color: var(--primary-dark-grayish-blue-50);
}
main .container .card.jeanette .testimonial p:first-child,
main .container .card.kira .testimonial p:first-child {
    color: var(--primary-dark-blackish-blue);
    margin-bottom: 15px;
}
main .container .card.jeanette .testimonial p:nth-child(2),
main .container .card.kira .testimonial p:nth-child(2) {
    color: var(--primary-dark-grayish-blue-70);
}

